test/parser/bad_type.stderr
Parse error, line 2:11 of user input
type Bad = | A
          ^
