test/parser/bad_type.bs

type Bad = | A

print(0)
